--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -6,7 +6,7 @@
 {% block content %}
 	<section class="container text-center">
 
-		<div class="px-4 pt-5 my-5 text-center border-bottom">
+		<div class="pt-5 text-center border-bottom">
 			<h1 class="display-4 fw-bold text-body-emphasis">Par où commencer ?</h1>
 			<div class="col-lg-6 mx-auto">
 				<p class="lead mb-4">Nous comprenons qu'aborder la création ou la refonte d'un site web ou d'une application mobile peut être intimidant. C'est pourquoi notre approche commence par une écoute attentive de vos besoins. Nous suivons un processus clair et transparent pour garantir que chaque étape de votre projet est parfaitement alignée avec vos objectifs..</p>
