--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,8 +84,7 @@
 
 			<script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
 			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-			{{ encore_entry_script_tags('app') }}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 			{{ encore_entry_script_tags('imagesloaded') }}
 			<script src="{{ asset('js/modernizr.custom.js') }}"></script>
 			{# <script src="{{ asset('js/jquery.shuffle.min.js') }}"></script> #}
@@ -177,6 +176,28 @@
 
 					document.addEventListener('scroll', displayFixed)
 				})()
+			</script>
+			<script>
+				$('.home_carousel').owlCarousel({
+					loop:false,
+					margin:10,
+					responsiveClass:true,
+					responsive:{
+						0:{
+							items:1,
+							nav:true
+						},
+						600:{
+							items:3,
+							nav:false
+						},
+						1000:{
+							items:5,
+							nav:true,
+							loop:false
+						}
+					}
+				})
 			</script>
 		{% endblock %}
 
