--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -42,12 +42,16 @@
 		<div class="page-scroll">
 			<div id="page_container" class="page-container bg-move-effect p-2">
 
+				<div class="container">
+					{% block navbar %}
+						{% include "back/includes/nav.html.twig" %}
+					{% endblock %}
+				</div>
+				
 
-				{% block navbar %}
-					{% include "back/includes/nav.html.twig" %}
-				{% endblock %}
-
-				{% block content %}{% endblock %}
+				<div class="container">
+					{% block content %}{% endblock %}
+				</div>
 
 				<!-- Footer -->
 				<footer class="site-footer clearfix">
