--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -14,47 +14,33 @@
 		</div>
 
 		{# hero home page #}
-		<section id="slider" class="slider-element" style="background: #2646532b url('img/hero-bg.png') center bottom no-repeat; background-size: 100% auto;">
+		<section id="slider" class="slider-element bg-home-image" style="color: var(--cnvs-bg-overlay-bg) !important;height: 100vh;">
 			<div class="container">
 				<div class="row align-items-md-end">
 					<div class="col-lg-5 align-self-center flex-column py-6">
-						<div class="col-12 col-md-12 col-lg-12">
-							<h1 class="display-2 mb-4 text-center">Agence web dans la Nièvre</h1>
-							<p class="mb-4 text-center">
-								Grâce à notre expertise en développement Web, je vous accompagne dans
+						<div class="col-12 col-md-12 col-lg-12 rounded pt-5 pb-5 bg-primary">
+							<h1 class="display-2 text-center text-white"><strong>Agence web dans l'Yonne</strong></h1>
+							<p class="mb-4 text-center text-white">
+							<strong>
+								Grâce à notre expertise en développement Web, ont vous accompagne dans
 								la création d'un site professionnel et attractif. Cependant, une conception
 								exceptionnelle ne se limite pas à la première étape.
+							</strong>
 							</p>
 						</div>
-						<div class="flex-sm-column button_home justify-content-center" style="text-align: center;">
-							<a href="#agence" class="btn btn-danger mr-3 animate-up-2 inline-block">Découvrir l'agence<span class="ml-2">
-									<span class="fas fa-arrow-down"></span>
-								</span>
-							</a><br>
-							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-check2-circle" viewbox="0 0 16 16">
-								<path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
-								<path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
-							</svg>
-							<strong>Aucune carte de crédit <span class="text-success">n'est requise</span>
-							</strong>
-						</div>
 					</div>
-					<div class="col-lg-7 dotted-bg">
+					<div class="col-lg-7 dotted-bg man_mobile" style="position: absolute;bottom:0;right: 0;">
 						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative">
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<div class="text-white bg-tertiary text-center pt-5" id="agence">
-			<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
-			<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
-			<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
-				<span class="ml-2">
-					<span class="fas fa-arrow-right"></span>
-				</span>
-			</a>
+		<div class="card-paiement mt-5 d-flex justify-content-center">
+			<strong class="text-dark text-center pt-5 pb-5">Aucune carte de crédit <small class="alert-success">n'est requise</small></strong>
 		</div>
+
+		
 
 		<div class="container">
 			<p class="lead mb-4 text-muted text-center">On conçoit la solution optimale de développement web pour chaque
@@ -105,13 +91,13 @@
 
 		<section class="my-5">
 			<div class="container-fluid">
-				<div class="row gx-5 align-items-center bg-black justify-content-center px-5 pt-5 text-white">
+				<div class="row gx-5 align-items-center bg-black justify-content-center px-5 pt-5 text-white 100-vh">
 					<div class="col-md-4">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
 						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 						<a href="{{ url('front_project') }}" class="btn btn-warning px-5 mt-5">Voir mes réalisations</a>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8 pt-5 pb-5">
 						<img src="{{ asset('img/home_section.webp') }}" alt="agence web dans la Nièvre (58)" height="100%">
 					</div>
 				</div>
@@ -243,6 +229,18 @@
 					</div>
 				</div>
 				<!-- /Pricing -->
+			</div>
+
+			<div class="text-white bg-tertiary text-center pt-5 pb-5" id="agence">
+				<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
+				<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+				<div class="ask">
+					<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
+						<span class="ml-2">
+							<span class="fas fa-arrow-right"></span>
+						</span>
+					</a>
+				</div>
 			</div>
 
 			<div class="thank-you">
