fixed project page

--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-	<div class="container-fluid text-center jumbotron">
+	<div class="container-fluid text-center jumbotron" style="margin-top: 4rem !important;">
 		<h1>Ce qu'on propose</h1>
 		<div class="page-subtitle">
 			<br>
