fixed estimate demand template

--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -54,7 +54,7 @@
                                     </div>
                                     <div class="ci-text">
                                         <h4 class="display-4">France</h4>
-                                        <p>Situé dans la Nièvre(58), je suis disponible pour des projets locaux comme nationaux.</p>
+                                        <p>Situé dans l'Yonne(89), Nous sommes disponibles pour des projets locaux comme nationaux.</p>
                                     </div>
                                 </div>
 
@@ -63,7 +63,7 @@
                                         <i class="linecons linecons-mail"></i>
                                     </div>
                                     <div class="ci-text">
-                                        <a href="mailto:wbelbeche.s@gmail.com" class="display-4" style="font-size: 20px;">wbelbeche.s@gmail.com</a>
+                                        <a href="mailto:wbelbeche.s@gmail.com" class="display-4" style="font-size: 20px;">contact@scriptzenit.fr</a>
                                         <p>N'hésitez pas à m'envoyer un e-mail pour toute question ou proposition de projet.</p>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                         <div class="col-xs-12 col-sm-8">
 
                             <div class="block-title">
-                                <h2>Comment puis-je vous aider ?</h2>
+                                <h2>Comment pouvons-nous vous aider ?</h2>
                             </div>
                             {{ form_start(form, {'action': path('front_contact'), 'attr': {'id': 'contact_form'}}) }}
 
