--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -46,6 +46,9 @@
 						</li>
 					{% endif %}
 					{% if app.user %}
+						<li class="menu-item {{ app.request.get('_route') == 'front_profile' ? 'active' : '' }}">
+							<a class="nav-link" href="{{ url('front_profile') }}">Profil</a>
+						</li>
 						<li class="menu-item {{ app.request.get('_route') == 'app_logout' ? 'active' : '' }}">
 							<a class="btn btn-danger" href="{{ url('app_logout') }}">Déconnexion</a>
 						</li>
