--- a/templates/front/maintenance/index.html.twig
+++ b/templates/front/maintenance/index.html.twig
@@ -12,11 +12,12 @@
 				<div id="content" class="page-content site-content single-post" role="main">
 
 					<div class="page-content">
-						<h6 class="display-6">Notre équipe travail dur à l'heure actuel</h6>
-                        <p>Des correctifs sont en cours de développement, merci de votre comphérension.</p><br>
-						<p class="lead">Bientôt les services serons rétablis, restée connecté(e)s.</p><br>
-                        <a href="{{ url('front_contact') }}" class="btn btn-primary pt-5 pb-5">Contactez-nous</a>
-					</div>
+                        <h6 class="display-6" style="margin-top: 20%;">Notre équipe travaille dur actuellement</h6>
+                        <span>Des correctifs sont en cours de développement, merci de votre compréhension.</span><br>
+                        <span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
+                        <a href="{{ url('front_contact') }}" class="pt-5 pb-5">Contactez-nous</a>
+                    </div>
+
 
 				</div>
 			</div>
