fixed margin bottom

--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header id="site_header" class="header">
+<header id="site_header" class="header" style="margin-top: 6rem !important;">
 	<div
 		class="header-content clearfix">
 
