--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-	<div class="container-fluid text-center jumbotron" style="margin-top: 4rem !important;">
+	<div class="container-fluid text-center jumbotron">
 		<h1>L'équipe</h1>
 		<div class="page-subtitle">
 			<h4>Découvrez notre équipe, notre expertise, et ce que l'ont peut vous apporter</h4>
