--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,5 +1,5 @@
 <div>
-	<header id="header">
+	<header id="header" style="margin-bottom: 4rem !important;">
 		<nav class="navbar navbar-expand-lg fixed-top container-fluid text-dark pt-5 pb-5 px-5" style="background-color: #ffffff;">
 			<!-- Text Logo -->
 			<div class="logo">
