--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -11,7 +11,7 @@
 			{% endfor %}
 		{% endfor %}
 	</div>
-	<div class="container mb-4 main-container">
+	<div class="container mb-4 main-container"  style="margin-top: 4rem !important;">
 		<div class="row">
 			<div class="col-lg-3">
 				<h3>Mes devis</h3>
