removed extends base.html

--- a/templates/front/maintenance/index.html.twig
+++ b/templates/front/maintenance/index.html.twig
@@ -1,5 +1,3 @@
-{% extends 'base.html.twig' %}
-
 {% block title %}Site en maintenance
 {% endblock %}
 
@@ -15,7 +13,8 @@
                         <h6 class="display-6" style="margin-top: 20%;">Notre équipe travaille dur actuellement</h6>
                         <span>Des correctifs sont en cours de développement, merci de votre compréhension.</span><br>
                         <span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
-                        <a href="{{ url('front_contact') }}" class="pt-5 pb-5">Contactez-nous</a>
+						<hr>
+                        <a href="mailto: contact@scriptzenit" class="pt-5 pb-5">Contactez-nous</a>
                     </div>
 
 
