wip: fixing errors & patch

--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -80,27 +80,28 @@
 			</div>
 			<!-- ./end-commercial -->
 			<!-- Modal -->
-				<div class="modal fade" id="modal_youssouf" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title" id="exampleModalLabel">Youssouf Ousmane</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<div class="modal fade" id="modal_youssouf" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">Youssouf Ousmane</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 								<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<p>Le parcours d'un champion de la vente dans les télécoms innovants</p>
-								<p>Youssouf Ousmane</p>
-								<p>Explorez le chemin fascinant d'un expert en télécoms innovants.</p>
-								<p>Découvrez comment transformer les défis en opportunités, et les clients potentiels en partenaires fidèles.</p>
-								<p>Préparez-vous à une aventure où la passion pour la technologie rencontre l'art de la persuasion.</p>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-							</div>
+							</button>
+						</div>
+						<div class="modal-body">
+							<p>Le parcours d'un champion de la vente dans les télécoms innovants</p>
+							<p>Youssouf Ousmane</p>
+							<p>Explorez le chemin fascinant d'un expert en télécoms innovants.</p>
+							<p>Découvrez comment transformer les défis en opportunités, et les clients potentiels en partenaires fidèles.</p>
+							<p>Préparez-vous à une aventure où la passion pour la technologie rencontre l'art de la persuasion.</p>
+							<p>Je suis là pour transformer vos rêves en réalité et clarifier les services en tant que responsable commercial.</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
 						</div>
 					</div>
+				</div>
 			</div>
 			<script>
 				$('#myModal').on('shown.bs.modal', function () {
@@ -160,6 +161,23 @@
 			<p class="lead text-white">Que vous soyez gérant ou particulier avec un projet en tête, faites appel à nos service pour une présence en ligne digital.</p>
 		</div>
 	</div>
+
+	 <div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1">Découvrez notre assistance 100% en ligne</h1>
+        <p class="lead">Dans le monde numérique d'aujourd'hui, une assistance 100% en ligne est devenue une nécessité incontournable.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+          <a href="https://support.scriptzenit.fr" class="btn btn-outline-secondary btn-lg px-4">Découvrir le support</a>
+        </div>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img class="rounded-lg-3" src="{{ asset('img/support2.svg') }}" alt="" width="720">
+      </div>
+    </div>
+  </div>
+
+  <div class="b-example-divider"></div>
 
 
 {% endblock %}
