--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -37,7 +37,7 @@
 		</section>
 
 		<div class="card-paiement mt-5 d-flex justify-content-center">
-			<strong class="text-dark text-center pt-5 pb-5">Aucune carte de crédit <small class="alert-success">n'est requise</small></strong>
+			<strong class="text-dark text-center pt-5 pb-5"><small class="alert-success">Aucune</small> carte de crédit n'est requise</strong>
 		</div>
 
 		
@@ -95,7 +95,7 @@
 					<div class="col-md-4">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
 						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
-						<a href="{{ url('front_project') }}" class="btn btn-warning px-5 mt-5">Voir mes réalisations</a>
+						<a href="{{ url('front_project') }}" class="btn btn-warning px-5 mt-5">Nos réalisations</a>
 					</div>
 					<div class="col-md-8 pt-5 pb-5">
 						<img src="{{ asset('img/home_section.webp') }}" alt="agence web dans la Nièvre (58)" height="100%">
