--- a/templates/base_maintenance.html.twig
+++ b/templates/base_maintenance.html.twig
@@ -38,36 +38,12 @@
 				<div class="container">
 					{% block content %}{% endblock %}
 				</div>
-
-				<!-- Footer -->
-				<footer class="site-footer clearfix">
-					<div class="footer-social">
-						<ul class="footer-social-links">
-							<li>
-								<a href="https://github.com/belbeche" target="_blank">Github</a>
-							</li>
-
-							<li>
-								<a href="https://www.linkedin.com/in/walid-belbeche/" target="_blank">LinkedIn</a>
-							</li>
-
-							<li>
-								<a href="{{ url('front_project')}}" target="_blank">Mes réalisations</a>
-							</li>
-						</ul>
-					</div>
-
-					<div class="footer-copyrights">
-						<p>
-							Walid BELBECHE © 2023 All rights reserved.</p>
-					</div>
-				</footer>
-				<!-- /Footer -->
-
-			</div>
-		</div>
-
-		<!-- Front script -->
+                <div class="container">
+                    {% block foorter %}
+                        {% include 'front/includes/footer.html.twig'%}
+                    {% endblock %}
+                </div>
+				
 		{% block javascripts %}
 			<script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
 			<script src="{{ asset('js/bootstrap.js') }}"></script>
