--- a/templates/front/maintenance/index.html.twig
+++ b/templates/front/maintenance/index.html.twig
@@ -15,7 +15,7 @@
                         <span>Des correctifs sont en cours de développement, merci de votre compréhension.</span><br>
                         <span>Bientôt les services seront rétablis, restez connecté(e)s.</span><br>
 						<hr>
-                        <a href="mailto: contact@scriptzenit" class="pt-5 pb-5">Contactez-nous</a>
+                        <a href="mailto: contact@scriptzenit.fr" class="pt-5 pb-5">Contactez-nous</a>
                     </div>
 
 
