wip: fixing errors + patch bdd

--- a/templates/base_user.html.twig
+++ b/templates/base_user.html.twig
@@ -44,7 +44,7 @@
 
 				<div class="container">
 					{% block navbar %}
-						{% include "back/includes/nav.html.twig" %}
+						{% include "front/includes/profile_nav.html.twig" %}
 					{% endblock %}
 				</div>
 				
