--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -18,7 +18,6 @@
 			</div>
 			<div class="menu" id="menu">
 				<ul class="menu-inner">
-
 					<li class="menu-item {{ app.request.get('_route') == 'front_home' ? 'active' : '' }}">
 						<a class="nav-link" href="{{ url('front_home') }}">Accueil</a>
 					</li>
@@ -30,27 +29,23 @@
 					<li class="menu-item {{ app.request.get('_route') == 'front_project' ? 'active' : '' }}">
 						<a class="nav-link" href="{{ url('front_project') }}">Nos réalisations</a>
 					</li>
-					{% if app.user %}
-						<li class="menu-item {{ app.request.get('_route') == 'front_assistance' ? 'active' : '' }}">
-							<a class="nav-link" href="{{ url('front_assistance') }}">Assistance</a>
-						</li>
-					{% else %}
-						<li class="menu-item {{ app.request.get('_route') == 'front_devis_new' ? 'active' : '' }}">
+					<li class="menu-item {{ app.request.get('_route') == 'front_devis_new' ? 'active' : '' }}">
 							<a class="nav-link" href="{{ url('front_devis_new') }}">Faire une demande</a>
-						</li>
+					</li>
+					<li class="menu-item {{ app.request.get('_route') == 'front_contact' ? 'active' : '' }}">
+						<a class="btn btn-outline-secondary" href="{{ url('front_contact') }}">Contact</a>
+					</li>
+					{% if not app.user %}
 						<li class="menu-item {{ app.request.get('_route') == 'app_login' ? 'active' : '' }}">
 							<a class="btn btn-info" href="{{ url('app_login') }}">Connexion</a>
 						</li>
-						<li class="menu-item {{ app.request.get('_route') == 'front_contact' ? 'active' : '' }}">
-							<a class="btn btn-outline-secondary" href="{{ url('front_contact') }}">Contact</a>
-						</li>
 					{% endif %}
-					{% if app.user %}
-						<li class="menu-item {{ app.request.get('_route') == 'front_profile' ? 'active' : '' }}">
-							<a class="nav-link" href="{{ url('front_profile') }}">Profil</a>
-						</li>
+					{% if app.user%}
 						<li class="menu-item {{ app.request.get('_route') == 'app_logout' ? 'active' : '' }}">
 							<a class="btn btn-danger" href="{{ url('app_logout') }}">Déconnexion</a>
+						</li>
+						<li class="menu-item {{ app.request.get('_route') == 'front_profile' ? 'active' : '' }}">
+							<a class="btn btn-info" href="{{ url('front_profile') }}">Profil</a>
 						</li>
 					{% endif %}
 					{% if is_granted('ROLE_ADMIN') %}
