--- a/templates/front/includes/profile_nav.html.twig
+++ b/templates/front/includes/profile_nav.html.twig
@@ -1,14 +1,14 @@
 <!-- Header -->
-<header id="site_header" class="header" style="margin-top: 4rem !important;">
+<header id="site_header" class="header">
 	<div
 		class="header-content clearfix">
 
 		<!-- Text Logo -->
 		<div class="text-logo">
-			<a href="{{ url('back_index') }}">
+			<a href="{{ url('front_home') }}">
 				<div class="logo-symbol"><span>{{ app.user.prenom|slice(0, 1) ~ app.user.nom|slice(0, 1) }}</span></div>
-				<div class="logo-text">{{ app.user.prenom }}
-					<span>{{ app.user.nom }}</span>
+				<div class="logo-text">{{ app.user.civility }} .{{ app.user.nom }}
+					<span>{{ app.user.prenom }}</span>
 				</div>
 			</a>
 		</div>
@@ -18,22 +18,15 @@
 		<div class="site-nav mobile-menu-hide">
 			<ul class="leven-classic-menu site-main-menu">
 				<li class="menu-item">
-					<a href="{{ url('back_devis_index') }}">Voir devis</a>
+					<a href="{{ url('front_assistance') }}">Voir devis</a>
 				</li>
 
 				<li class="menu-item">
-					<a href="{{ url('back_project_index') }}">Voir projets</a>
+					<a href="#">Voir projets</a>
 				</li>
 
 				<li class="menu-item">
-					<a href="{{ url('back_category_index')}}">Voir Les categories</a>
-				</li>
-
-				<li class="menu-item">
-					<a href="{{ url('back_user_index')}}">Voir utilisateur</a>
-				</li>
-				<li class="menu-item">
-					<a href="{{ url('back_ticket') }}">Voir ticket</a>
+					<a href="{{ url('front_edit_profile', {id: app.user.id }) }}">Modifier mon profil</a>
 				</li>
 
 				<li class="menu-item">
