--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -69,8 +69,8 @@
 					<p>En cliquant sur "Je m'inscris", un compte sera automatiquement créé sur notre site d'assistance. La sécurité de vos données est notre priorité absolue, et nos applications sont entièrement conformes aux normes de la
 					<a href="https://www.cnil.fr/fr/guide-rgpd-du-developpeur">CNIL</a>. Vous avez la possibilité de supprimer vos données instantanément depuis votre espace personnel.</p>
 					<div class="container">
-						<button id="btn-register" type="submit" data-register-url="{{ url('api_register') }}" class="btn btn-primary">Je m'inscris</button>
-						<span data-register-url2="http://127.0.0.1:8000/api/register" data-redirect-to-login="{{ url('app_login') }}" class="register-url2"></span>
+						<button id="btn-register" type="submit" class="btn btn-primary">Je m'inscris</button>
+						{# <span data-register-url2="http://127.0.0.1:8000/api/register" data-redirect-to-login="{{ url('app_login') }}" class="register-url2"></span> #}
 					</div>
 				{{ form_end(formRegister) }}
 			</div>
